# bevy_cathode_plugin

./: Cargo.toml  README.md
.cargo/: config.toml
assets/shaders/: flat_crt.wgsl  post_processing.wgsl
examples/: gui.rs
src/: lib.rs  main.rs
