[package]
name = "bevy_crt"
version = "0.1.0"
edition = "2024"

[lib]
name = "bevy_crt"
path = "src/lib.rs"
test = true

[dependencies]
bevy = {version = "0.17", features = ["webgpu"]}

[profile.dev.package."*"]
opt-level=3

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.13.1", default-features = false, features = ["js"] }
